# testtasks

kasper_test_task/: CMakeLists.txt  README.txt  base_types.h  converter.h  locale_en.h  locale_ru.h  main.cpp
kasper_test_task/unittest/: main_test.cpp
saber_test_task/: CMakeLists.txt  custom_list.h  main.cpp
testtask_trueconf/: README  container.h  main.cpp  testtask_trueconf.pro
